--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: poseidon/wait-for-status-checks@v0.5.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          ignore: test_e2e_longrunning
+          ignore: test-e2e-longrunning
       
       - name: merge backported PR
         id: merge_backport_pr
