--- a/webui/react/package.json
+++ b/webui/react/package.json
@@ -2,11 +2,20 @@
   "name": "determined-webui",
   "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "resolutions": {
+    "ajv": "^8.0.0"
+  },
   "engines": {
     "node": ">=20.1.0 <21",
     "npm": ">=9.6.4"
   },
   "scripts": {
+    "bindings": "npm run bindings:clean && npm run bindings:build",
+    "bindings:clean": "rimraf ./generated/orval",
+    "bindings:build": "orval --config orval.config.ts",
     "postshrinkwrap": "npx npm-force-resolutions && npm install --ignore-scripts",
     "start": "vite serve",
     "preview": "vite preview",
@@ -53,7 +62,7 @@
     "micro-observables": "^1.7.2",
     "modern-normalize": "^2.0.0",
     "notebook": "file:src/vendor/notebook",
-    "omnibar": "github:hamidzr/omnibar",
+    "omnibar": "https://github.com/hamidzr/omnibar.git",
     "path-to-regexp": "^8.1.0",
     "pretty-bytes": "^6.1.1",
     "react": "^18.3.1",
@@ -112,28 +121,18 @@
     "@types/sprintf-js": "^1.1.4",
     "@types/throttle-debounce": "^5.0.2",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "@vitest/coverage-v8": "^1.6.0",
     "browserslist": "^4.23.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "express": "^4.20.0",
     "fast-check": "^3.18.0",
     "jest-websocket-mock": "^2.5.0",
     "jsdom": "^16.7.0",
     "morgan": "^1.10.0",
     "npm-force-resolutions": "0.0.10",
+    "orval": "^7.2.0",
     "playwright-page-model-base": "npm:@hpe.com/playwright-page-model-base@^0.3.1",
     "prettier": "^3.2.5",
     "request": "^2.88.2",
