--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -4358,7 +4358,7 @@ workflows:
             parameters:
               name: [test-e2e-slurm-enroot-gcp-gpu]
               container-run-type: ["enroot"]
-              mark: ["e2e_slurm and not parallel and e2e_gpu"]
+              mark: ["e2e_slurm and not parallel and (e2e_gpu or gpu_required)"]
               environment-gpu-enabled: ["1"]
           requires:
             - build-go-ee
