--- a/webui/react/package.json
+++ b/webui/react/package.json
@@ -73,7 +73,7 @@
     "react-draggable": "^4.4.6",
     "react-helmet-async": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "6.9.0",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.7.10",
     "react-window": "^1.8.10",
