run only one test

--- a/e2e_tests/pytest.ini
+++ b/e2e_tests/pytest.ini
@@ -36,6 +36,7 @@ markers =
 
     distributed_quarantine: distributed training tests (quarantine)
     det_deploy_local_quarantine: test det deploy local (quarantine)
+    iterate: iterate test
 
 
 junit_logging = all
