--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -4037,23 +4037,6 @@ workflows:
                 - /pull\/.*/
 
 
-
-      - test-e2e-gke:
-          name: test-e2e-gke-single-gpu
-          context:
-            - gcp-ci
-            - determined-ee
-            - gcp-ci-cluster-default-user-credentials
-          requires:
-            - package-and-push-system-dev-ee
-          matrix:
-            parameters:
-              cluster-id-prefix: ["e2e-gpu"]
-              mark: ["e2e_gpu"]
-              parallelism: [1]
-
-
-
       - test-e2e-gke:
           name: test-e2e-gke-single-cpu
           context:
@@ -4065,7 +4048,7 @@ workflows:
           matrix:
             parameters:
               cluster-id-prefix: ["e2e-cpu"]
-              mark: ["e2e_gpu and not gpu_required"]
+              mark: ["iterate"]
               parallelism: [1]
               machine-type: ["n1-standard-8"]
               gpus-per-machine: [0]
