chore: bump current environment image versions to 0.38.0

--- a/webui/react/src/fixtures/responses/trial-details/old-trial-config-noop-adaptive.json
+++ b/webui/react/src/fixtures/responses/trial-details/old-trial-config-noop-adaptive.json
@@ -30,8 +30,8 @@
   "name": "noop_adaptive",
   "environment": {
     "image": {
-      "cpu": "determinedai/pytorch-ngc-dev:0736b6d",
-      "gpu": "determinedai/pytorch-ngc-dev:0736b6d"
+      "cpu": "determinedai/pytorch-ngc:0.38.0",
+      "gpu": "determinedai/pytorch-ngc:0.38.0"
     },
     "ports": null,
     "force_pull_image": false,
