--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -291,7 +291,7 @@ commands:
       - when:
           condition: <<parameters.tf2>>
           steps:
-            - run: docker pull determinedai/pytorch-ngc-dev:0736b6d
+            - run: docker pull determinedai/pytorch-ngc:0.38.0
 
   login-docker:
     parameters:
@@ -2479,7 +2479,7 @@ jobs:
 
   test-unit-harness-gpu-tf:
     docker:
-      - image: determinedai/tensorflow-ngc-dev:0736b6d
+      - image: determinedai/tensorflow-ngc:0.38.0
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2506,7 +2506,7 @@ jobs:
 
   test-unit-harness-pytorch2-gpu:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc:0.38.0
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2533,7 +2533,7 @@ jobs:
 
   test-unit-harness-pytorch2-cpu:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc:0.38.0
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
       - checkout
@@ -2559,7 +2559,7 @@ jobs:
 
   test-unit-harness-gpu-parallel:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc:0.38.0
     resource_class: determined-ai/container-runner-multi-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2586,7 +2586,7 @@ jobs:
 
   test-unit-harness-gpu-deepspeed:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc:0.38.0
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -3648,7 +3648,7 @@ jobs:
         type: string
         default: "1"
       environment-image:
-        default: determinedai/pytorch-ngc-dev:0736b6d
+        default: determinedai/pytorch-ngc:0.38.0
         type: string
       accel-node-taints:
         type: string
