--- a/examples/computer_vision/iris_tf_keras/adaptive.yaml
+++ b/examples/computer_vision/iris_tf_keras/adaptive.yaml
@@ -1,8 +1,8 @@
 name: iris_tf_keras_adaptive_search
 environment:
   image:
-    cpu: determinedai/tensorflow-ngc-dev:0736b6d
-    gpu: determinedai/tensorflow-ngc-dev:0736b6d
+    cpu: determinedai/tensorflow-ngc:0.38.0
+    gpu: determinedai/tensorflow-ngc:0.38.0
 hyperparameters:
   learning_rate:
     type: log
