--- a/examples/computer_vision/iris_tf_keras/distributed.yaml
+++ b/examples/computer_vision/iris_tf_keras/distributed.yaml
@@ -1,8 +1,8 @@
 name: iris_tf_keras_distributed
 environment:
   image:
-    cpu: determinedai/tensorflow-ngc-dev:0736b6d
-    gpu: determinedai/tensorflow-ngc-dev:0736b6d
+    cpu: determinedai/tensorflow-ngc:0.38.0
+    gpu: determinedai/tensorflow-ngc:0.38.0
 hyperparameters:
   learning_rate: 1.0e-4
   learning_rate_decay: 1.0e-6
