--- a/examples/deepspeed/dcgan/mnist.yaml
+++ b/examples/deepspeed/dcgan/mnist.yaml
@@ -13,7 +13,7 @@ environment:
   environment_variables:
     - NCCL_DEBUG=INFO
     - NCCL_SOCKET_IFNAME=ens,eth,ib
-  image: determinedai/pytorch-ngc-dev:0736b6d
+  image: determinedai/pytorch-ngc:0.38.0
 bind_mounts:
   - host_path: /tmp
     container_path: /data
