--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -21,7 +21,7 @@ executors:
 parameters:
   det-version:
     type: string
-    default: 0.35.0
+    default: 0.35.1-rc0
   docker-image:
     type: string
     default: determinedai/cimg-base:latest
