--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2468,9 +2468,11 @@ jobs:
           path: /tmp/test-results
 
   test-unit-harness-gpu-deepspeed:
+    docker:
+      - image: determinedai/pytorch-ngc-dev:0736b6d
     machine:
-      image: determinedai/pytorch-ngc-dev:0736b6d
-      resource_class: gpu.nvidia.medium
+      image: linux-cuda-12:default
+      resource_class: gpu.nvidia.small
     steps:
       - run: nvidia-smi
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
