--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2470,7 +2470,7 @@ jobs:
   test-unit-harness-gpu-deepspeed:
     machine:
       image: linux-cuda-12:default
-      resource_class: gpu.nvidia.small
+      resource_class: gpu.nvidia.small.multi
     steps:
       - run: nvidia-smi
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
