--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1420,10 +1420,13 @@ commands:
             fi
 
   install-nvidia-apex:
-    description: "Dependency for some of the GPU tests"
+    description: "Dependency for some of the GPU tests. Apex installation needs Cuda 12.1 because Pytorch binaries were compiled by Cuda 12.1"
     steps:
-      - run: git clone https://github.com/NVIDIA/apex
-      - run: pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./apex
+      - run: wget https://developer.download.nvidia.com/compute/cuda/12.1.0/local_installers/cuda_12.1.0_530.30.02_linux.run
+      - run: sudo sh cuda_12.1.0_530.30.02_linux.run --toolkit --silent
+      - run: nvcc --version
+      - run: git clone https://github.com/NVIDIA/apex ~/
+      - run: pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ~/
 
 
 jobs:
