--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -405,6 +405,10 @@ commands:
       python-version:
         type: string
         default: "3.8.18"
+      install-nvidia-apex:
+        description: "Install dependency for some of the GPU tests."
+        type: boolean
+        default: false
     steps:
       - run:
           name: Write cache key
@@ -504,6 +508,19 @@ commands:
                 tools/scripts/retry.sh pip install -r $i
               done
             fi
+      - when:
+          condition: <<parameters.install-nvidia-apex>>
+          steps:
+            - run:
+                name: Install Nvidia Apex
+                description: "Apex installation needs Cuda 12.1 because Pytorch binaries were compiled by Cuda 12.1."
+                command: |
+                  wget https://developer.download.nvidia.com/compute/cuda/12.1.0/local_installers/cuda_12.1.0_530.30.02_linux.run
+                  sudo sh cuda_12.1.0_530.30.02_linux.run --toolkit --silent
+                  nvcc --version
+                  git clone https://github.com/NVIDIA/apex ~/apex
+                  pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ~/apex
+
       - save_cache:
           key: det-python-deps-<<pipeline.parameters.cache-buster>>-{{ checksum "/tmp/cachefile" }}
           paths:
@@ -1418,27 +1435,6 @@ commands:
             else
               make -C <<parameters.component>> <<parameters.target>>
             fi
-
-  install-nvidia-apex:
-    description: "Dependency for some of the GPU tests. Apex installation needs Cuda 12.1 because Pytorch binaries were compiled by Cuda 12.1"
-    steps:
-      - run:
-          name: Write cache key
-          command: |
-            date -u '+%y/%m/%d' >> /tmp/cachefile
-      - restore_cache:
-          keys:
-            - det-nvidia-apex-build-<<pipeline.parameters.cache-buster>>-{{ checksum "/tmp/cachefile" }}
-      - run: wget https://developer.download.nvidia.com/compute/cuda/12.1.0/local_installers/cuda_12.1.0_530.30.02_linux.run
-      - run: sudo sh cuda_12.1.0_530.30.02_linux.run --toolkit --silent
-      - run: nvcc --version
-      - run: git clone https://github.com/NVIDIA/apex ~/apex
-      - run: pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ~/apex
-      # - save_cache:
-      #     key: det-nvidia-apex-build-<<pipeline.parameters.cache-buster>>-{{ checksum "/tmp/cachefile" }}
-      #     paths:
-      #       - "/tmp/venv"
-      #       - "/tmp/conda"
 
 jobs:
   build-helm:
@@ -2441,7 +2437,7 @@ jobs:
           determined: true
           extra-requirements-file: "harness/tests/requirements/requirements-harness.txt"
           executor: linux-cuda-12:default
-      - install-nvidia-apex
+          install-nvidia-apex: true
       - run: COVERAGE_FILE=/home/circleci/project/test-unit-harness-pytorch2-gpu-pycov make -C harness test-pytorch-gpu
       - run: coverage xml -i --data-file=./test-unit-harness-pytorch2-gpu-pycov
       - run: codecov -v -t $CODECOV_TOKEN -F harness
@@ -2494,7 +2490,7 @@ jobs:
           determined: true
           extra-requirements-file: "harness/tests/requirements/requirements-harness.txt"
           executor: linux-cuda-12:default
-      - install-nvidia-apex
+          install-nvidia-apex: true
       - run: COVERAGE_FILE=/home/circleci/project/test-unit-harness-gpu-parallel-pycov make -C harness test-gpu-parallel
       - run: coverage xml -i --data-file=./test-unit-harness-gpu-parallel-pycov
       - run: codecov -v -t $CODECOV_TOKEN -F harness
